<resources>
    <string name="app_name">Podax</string>
    <string name="app_long_name">Podax Podcaster</string>
    <string name="app_version">7.08</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="remove_from_playlist">Remove From Playlist</string>
    <string name="playlist">Playlist</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="search_hint">Search within Podax</string>
    <string name="refresh_subscription">Refresh Subscription</string>
    <string name="episode_not_downloaded">This episode has not been downloaded.</string>
    <string name="import_subscriptions">Add Subscriptions</string>
    <string name="search">Search</string>
    <string name="preferences">Preferences</string>
    <string name="about_content">
<![CDATA[

		<p>Podax was created by Dan Goldstein.
			You can email me at <a href="mailto:dan@axelby.com">dan@axelby.com</a> with any comments or questions you have.
		</p>
		<p>Podax is open source software. You can get the source code at
			<a href="http://github.com/thasmin/Podax">http://github.com/thasmin/Podax</a>.
			It is available under the Apache 2.0 license.
		</p>
		<p>Special thanks to everyone who\'s helped on Github and by sending me email.</p>

		<h3>Changelog</h3>
		<p><strong>Version 7</strong></p>
		<p>- New audio player fixes speedup and reduces errors</p>
		<p>- Very basic statistics</p>
		<p>- Includes ads that show up once per hour of listening time and can be turned off</p>

        <h3>Copyright</h3>
        <p><pre>
    Copyright 2014 Dan Goldstein

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
        </pre></p>

		<h3>Open Source Licenses</h3>

		<h4>drag-sort-listview</h4>
		<div><a href="https://github.com/bauerca/drag-sort-listview">(link)</a></div>
        <div>Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache 2.0</a>.</div>
        <hr>

		<h4>libtremor - Ogg decoding</h4>
		<div><a href="http://xiph.org/vorbis/">(link)</a></div>
		<p>Copyright © 2002, Xiph.org Foundation. Licensed under <a href="http://opensource.org/licenses/BSD-3-Clause">BSD 3-Clause License</a>.</p>
        <hr>

        <h4>libmpg123</h4>
        <div><a href="http://www.mpg123.de/">(link)</a></div>
        <p>Copyright © 1995-2013 by Michael Hipp and others, free software under the terms of the <a href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">LGPL v2.1</a></p>
        <hr>

        <h4>ACRA</h4>
        <p><a href="http://acra.ch">(link)</a></p>
        <p>Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache 2.0</a>.</p>
        <hr>

        <h4>Flattr4j</h4>
        <p><a href="http://www.shredzone.org/projects/flattr4j">(link)</a></p>
        <p>Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache 2.0</a>.</p>
        <hr>

        <h4>Google-gson-stream</h4>
        <p><a href="https://code.google.com/p/google-gson/">(link)</a></p>
        <p>Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache 2.0</a>.</p>
        <hr>

        <h4>Guava</h4>
        <p><a href="https://code.google.com/p/guava-libraries/">(link)</a></p>
        <p>Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache 2.0</a>.</p>
        <hr>

        <h4>JSR 305</h4>
        <p><a href="https://code.google.com/p/jsr-305/">(link)</a></p>
        <p>Copyright © 2014, Google. Licensed under <a href="http://opensource.org/licenses/BSD-3-Clause">BSD 3-Clause License</a>.</p>
        <hr>

        <h4>Volley</h4>
        <p><a href="https://android.googlesource.com/platform/frameworks/volley">(link)</a></p>
        <p>Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache 2.0</a>.</p>

        <h4>Android Iconify</h4>
        <p><a href="http://joanzapata.com/android-iconify/">(link)</a></p>
        <p>Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache 2.0</a>.</p>

        <h4>Font Awesome by Dave Gandy</h4>
        <p><a href="http://fontawesome.io/">(link)</a></p>
        <p>Licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a>.</p>
    ]]>
    </string>
    <string name="about_podax">About Podax</string>
    <string name="download_only_on_wifi">Podax is set to only download episodes when on Wi-fi.</string>
    <string name="no_downloads">There are no episodes in the playlist that were not downloaded.</string>
    <string name="add_rss_feed">Add RSS feed</string>
    <string name="add_from_opml_file">Add from OPML file</string>
    <string name="popular_subscription_title">Popular Subscription</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="rss_not_valid">RSS not valid</string>
    <string name="drag_to_rearrange_playlist">drag to rearrange playlist</string>
    <string name="move_to_first_in_playlist">Move to First in Playlist</string>
    <string name="go_to_details">Go To Details</string>
    <string name="go_to_playlist">Go To Playlist</string>
    <string name="rewind">Rewind</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="skip_to_end">Skip To End</string>
    <string name="thumbnail">thumbnail</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="update_request_no_wifi">Podax will not update because there is no Wi-Fi connection. This can be changed in the preferences.</string>
    <string name="no_episodes_in_playlist">There are no episodes in the playlist.</string>
    <string name="add">Add</string>
    <string name="restart">Restart</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_intro">Thanks for using Podax! You\'re almost ready to enter the blossoming world of podcasts. All you need to do is subscribe to a podcast and Podax will do the rest. Visit the RSS link in the browser, type the RSS feed URL below, or choose one of our favorite podcasts below.</string>
    <string name="welcome_american_life">This American Life</string>
    <string name="welcome_american_life_desc">This American Life is a weekly podcast that tells interesting stories in otherwise mundane situations. It has won all of the major broadcasting awards.</string>
    <string name="subscribe">Subscribe</string>
    <string name="rss">RSS</string>
    <string name="welcome_tech_news_today">Tech News Today</string>
    <string name="welcome_tech_news_today_desc">Tom Merritt brings you "Tech News Today" with co-hosts Sarah Lane (TechTV, Revision3), Iyaz Akhtar (PC Mag, TechVi) and others. Get up to speed, with a fun and friendly ride through the need-to-know tech news of the day.</string>
    <string name="subscription_thumbnail">subscription thumbnail</string>
    <string name="download">Download</string>
    <string name="pref_update_wifi">Only update subscriptions or download episodes while connected to a Wi-Fi network.</string>
    <string name="pref_update_wifi_title">Wi-Fi Only</string>
    <string name="pref_auto_delete">Delete episodes automatically when playback finishes or you skip to the next episode. If disabled, the episode will be added to the bottom of the playlist.</string>
    <string name="pref_auto_delete_title">Delete Episodes Automatically</string>
    <string name="pref_max_num_episodes">Maximum number of downloaded episodes in playlist.</string>
    <string name="pref_max_num_episodes_title">Limit Number of Downloaded Episodes</string>
    <string-array name="pref_max_num_episodes_entries">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>Unlimited</item>
    </string-array>
    <string-array name="pref_max_num_episodes_values">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>10000</item>
    </string-array>
    <string name="pref_anon_usage">Send anonymous usage data to improve Podax.</string>
    <string name="pref_anon_usage_title">Send Usage Data</string>
    <string name="pref_crash_reports">Send error reports to the developers if Podax crashes.</string>
    <string name="pref_crash_reports_title">Send Crash Reports</string>
    <string name="more_options">More Options</string>
    <string name="stop">Stop</string>
    <string name="payment">Payment</string>
    <string name="donate">Donate</string>
    <string name="flattr">Flattr</string>
    <string name="changelog">Changelog</string>
    <string name="cannot_play_episode">Podax is unable to play \"%s\". Skipping…</string>
    <string name="log_viewer">Log Viewer</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="subscription_settings">Subscrption Settings</string>
    <string name="gpodder_authenticator_activity_title">GPodder Account</string>
    <string name="gpodder">GPodder</string>
    <string name="configuration">Configuration</string>
    <string name="podcasts">Podcasts</string>
    <string name="episodes">Episodes</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="subscription">Subscription</string>
    <string-array name="expiration_options">
        <item>Never</item>
        <item>7 days</item>
        <item>14 days</item>
    </string-array>
    <string-array name="expiration_values">
        <item>-1</item>
        <item>7</item>
        <item>14</item>
    </string-array>
    <string name="username">Username</string>
    <string name="episode_picture">episode picture</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="now_playing">Now Playing</string>
    <string name="subscribe_to_podcasts">Subscribe To Podcasts</string>
    <string name="top_itunes_podcasts">Top iTunes Podcasts</string>
    <string name="gpodder_sync">gpodder.net Sync</string>
    <string name="pref_sdcard">SD Card for podcast storage</string>
    <string name="pref_sdcard_title">SD Card</string>
    <string-array name="pref_sdcard_values">
        <item>/storage/sdcard0</item>
        <item>/storage/extSdCard</item>
        <item>/mnt/shared/sdcard0</item>
    </string-array>
    <string-array name="pref_sdcard_entries">
        <item>Internal Storage</item>
        <item>External SD Card</item>
        <item>GenyMotion Shared sdcard0</item>
    </string-array>
    <string-array name="gpodder_device_types">
        <item>desktop</item>
        <item>laptop</item>
        <item>mobile</item>
        <item>server</item>
        <item>other</item>
    </string-array>
    <string name="crash_toast_text">Oops, Podax has crashed. Sorry about that!</string>
    <string name="crash_dialog_text">Sorry about that crash earlier. Would you like to report the crash to the developer?</string>
    <string name="crash_comment_prompt">What was happening before the crash?</string>
    <string name="view_website">View Website</string>
    <string name="pref_playbackrate_title">Playback Rate</string>
    <string name="pref_playbackrate">How fast the episode should play</string>
    <string name="stats">Stats</string>
    <string name="find_a_podcast">Find a Podcast from iTunes Toplists</string>
</resources>