<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

   <PreferenceCategory android:title="Sleepytime">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="sleepytimeEnabled"
            android:summary="Useful when listening to podcasts while falling asleep. When a podcast ends, it goes into the Sleepytime list and the next podcast does not start automatically."
            android:title="Use Sleepytime Mode" />
        <com.axelby.podax.ui.SleepytimeHoursPreference
            android:title="Start and Stop Times"
            android:dependency="sleepytimeEnabled"
            app:minKey="sleepytimeStart"
            app:maxKey="sleepytimeEnd" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Lifecycle" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wifiPref"
            android:summary="@string/pref_update_wifi"
            android:title="@string/pref_update_wifi_title" />
        <com.axelby.podax.ui.LimitedSeekBarPreference
            android:defaultValue="10000"
            android:key="queueMaxNumPodcasts"
            android:summary="@string/pref_max_num_episodes"
            android:title="@string/pref_max_num_episodes_title"
            android:entries="@array/pref_max_num_episodes_entries"
            android:entryValues="@array/pref_max_num_episodes_values" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Playback">
        <com.axelby.podax.ui.LimitedSeekBarPreference
            android:defaultValue="1.0"
            android:key="playbackRate"
            android:summary="@string/pref_playbackrate"
            android:title="@string/pref_playbackrate_title"
            android:entries="@array/pref_playbackrate_entries"
            android:entryValues="@array/pref_playbackrate_values" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Storage">
        <com.axelby.podax.ui.StorageListPreference
            android:defaultValue="/storage/sdcard0"
            android:key="storageCard"
            android:summary="@string/pref_sdcard"
            android:title="@string/pref_sdcard_title"
            android:entries="@array/pref_sdcard_entries"
            android:entryValues="@array/pref_sdcard_values" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Debug" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="acra.enable"
            android:summary="@string/pref_crash_reports"
            android:title="@string/pref_crash_reports_title" />
    </PreferenceCategory>

</PreferenceScreen>