<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_top">
        <item android:id="@+id/playlist"
              android:icon="@drawable/ic_menu_podax"
              android:title="@string/playlist" />
        <item android:id="@+id/subscriptions"
              android:icon="@drawable/ic_menu_podax"
              android:title="@string/subscriptions" />
    </group>

    <group android:id="@+id/group_second">
        <item android:id="@+id/latest_activity"
              android:icon="@drawable/ic_menu_alarm"
              android:title="@string/latest_activity" />

        <item android:id="@+id/weekly_planner"
              android:icon="@drawable/ic_menu_podax"
              android:title="@string/weekly_planner" />

        <item android:id="@+id/finished_episodes"
              android:icon="@drawable/ic_menu_done_all"
              android:title="@string/finished_episodes" />

        <item android:id="@+id/gpodder"
              android:icon="@drawable/ic_menu_gpoddernet"
              android:title="@string/gpodder_sync" />
    </group>

    <group android:id="@+id/group_stats">
        <item android:id="@+id/stats"
              android:icon="@drawable/ic_menu_trending_up"
              android:title="@string/stats" />
    </group>

    <item android:id="@+id/preferences"
          android:icon="@drawable/ic_menu_settings"
          android:title="@string/preferences" />

    <item android:id="@+id/about"
          android:icon="@drawable/ic_menu_podax"
          android:title="@string/about" />

    <item android:id="@+id/log_viewer"
          android:icon="@drawable/ic_menu_info"
          android:title="@string/log_viewer" />

</menu>