<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

        <RelativeLayout
                android:id="@+id/toprow"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp">

            <ImageView
                    android:id="@+id/subscription_img"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/subscription"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitXY"/>

            <LinearLayout
                    android:id="@+id/mainlayout"
                    android:layout_width="0px"
                    android:layout_toRightOf="@id/subscription_img"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Episode Title"
                        tools:ignore="HardcodedText"/>

                <TextView
                        android:id="@+id/subscription_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Episode Title"
                        tools:ignore="HardcodedText"/>

                <Button
                        android:id="@+id/payment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/payment"
                        android:text="@string/donate"
                        android:layout_gravity="center_horizontal"/>

                <View
                        android:layout_height="20dp"
                        android:layout_width="wrap_content"/>

                <TextView
                        android:id="@+id/playlist_position"
                        android:text="#1 in playlist"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        tools:ignore="HardcodedText"/>

                <Button
                        android:id="@+id/playlist_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
                android:id="@+id/seekLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:textIsSelectable="true"/>

            <SeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:progressDrawable="@drawable/progress"/>

            <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:textIsSelectable="true"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/play_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

            <ImageButton
                    android:id="@+id/restart_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/restart"
                    android:padding="10dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_media_previous"/>

            <ImageButton
                    android:id="@+id/rewind_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/rewind"
                    android:padding="10dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_media_rew"/>

            <ImageButton
                    android:id="@+id/play_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="3"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/pause"
                    android:padding="10dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_media_play"/>

            <ImageButton
                    android:id="@+id/forward_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/fast_forward"
                    android:padding="10dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_media_ff"/>

            <View
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            <ImageButton
                    android:id="@+id/skiptoend_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/skip_to_end"
                    android:padding="10dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_media_next"/>
        </LinearLayout>

        <TextView
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorLink="@color/podaxColor" />

    </LinearLayout>

</ScrollView>
