<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/leftside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.android.volley.toolbox.NetworkImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/logo"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/episode_picture"/>

        <LinearLayout
                android:id="@+id/rightside"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/title"
                    tools:ignore="HardcodedText"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:id="@+id/description"
                    tools:ignore="HardcodedText"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscribe"
                android:id="@+id/add"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight=".5"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_website"
                android:layout_weight=".5"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/view_website"/>
    </LinearLayout>
</LinearLayout>